--- a/分流无倍率.ini
+++ b/分流无倍率.ini
@@ -48,7 +48,7 @@ ruleset=📺 Disney,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cla
 ruleset=📺 Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=📺 Emby,https://raw.githubusercontent.com/Yzaams/clash/main/emby.list
 ruleset=📺 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
-ruleset=📺 国内媒体,https://raw.githubusercontent.com/Yzaams/clash/main/movies.list
+ruleset=📺 国内媒体,https://raw.githubusercontent.com/Yzaams/clash/main/%E5%9B%BD%E5%86%85%E5%AA%92%E4%BD%93.list
 ruleset=📺 国外媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🎮 Game,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Epic.list
 ruleset=🎮 Game,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Origin.list
