--- a/守候+古茗.ini
+++ b/守候+古茗.ini
@@ -102,8 +102,8 @@ custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🇭🇰 香港低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(港|HK|Hong Kong)|((?=.*🧃|🍾|🍸|🧉|🍹|🥤)(?=.*港|HK|Hong Kong))`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 香港1倍`url-test`^(?!.*[X|x|×]).*\b(港|HK|Hong Kong)\b|((?=.*🧃|🍾|🍸|🧉|🍹|🥤)(?=.*港|HK|Hong Kong))`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(港|HK|Hong Kong)|(?=.*🧃|🍾|🍸|🧉|🍹|🥤)(?=.港|HK|Hong Kong)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港1倍`url-test`^(?!.*[X|x|×]).*\b(港|HK|Hong Kong)\b|(?=.*🧃|🍾|🍸|🧉|🍹|🥤)(?=.港|HK|Hong Kong).*`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港高级`url-test`^(?=.*(?:港|HK|Hong Kong)).*(?:IEPL|IPLC|EIP|CN2GIA|BGP|星链).*|((?=.*🥤)(?=.*港|HK|Hong Kong))`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 台湾低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(台|新北|彰化|TW|Taiwan)|((?=.*🧃|🍾|🍸|🧉|🍹|🥤)(?=.*台|新北|彰化|TW|Taiwan))`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 台湾1倍`url-test`^(?!.*[X|x|×]).*\b(台|新北|彰化|TW|Taiwan)\b|((?=.*🧃|🍾|🍸|🧉|🍹|🥤)(?=.*台|新北|彰化|TW|Taiwan))`http://www.gstatic.com/generate_204`300,,50
