--- a/古+守.ini
+++ b/古+守.ini
@@ -48,6 +48,7 @@ ruleset=🎮 Bahamut,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cl
 ruleset=🎶 Shopify,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Spotify.list
 ruleset=📺 Disney,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list
 ruleset=📺 Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
+ruleset=📺 guguEmby,https://raw.githubusercontent.com/Yzaams/clash/main/guguemby.list
 ruleset=📺 Emby,https://raw.githubusercontent.com/Yzaams/clash/main/emby.list
 ruleset=📺 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=📺 国内媒体,https://raw.githubusercontent.com/Yzaams/clash/main/%E5%9B%BD%E5%86%85%E5%AA%92%E4%BD%93.list
@@ -91,6 +92,7 @@ custom_proxy_group=🤝 Discord`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城
 custom_proxy_group=🎶 Shopify`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 Disney`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 Netflix`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
+custom_proxy_group=📺 guguEmby`select`[]🌏 守候低倍`
 custom_proxy_group=📺 Emby`select`[]DIRECT`[]🌏 低倍节点`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 国内媒体`select`[]DIRECT
 custom_proxy_group=📺 国外媒体`select`[]🌏 低倍节点`[]🚀 节点选择`[]🚀 手动切换
@@ -102,25 +104,26 @@ custom_proxy_group=🍃 应用净化`select`[]REJECT`[]DIRECT
 custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=🇭🇰 香港低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(港|HK|Hong Kong)|^(?=.*(🧃|🍾|🍸|🧉|🍹))(?=.*(🇭🇰|港|HK|Hong))`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 香港1倍`url-test`^(?!.*[X|x|×]).*\b(港|HK|Hong Kong)\b|^(?=.*(🧃|🍾|🍸|🧉|🍹))(?=.*(🇭🇰|港|HK|Hong))`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(港|HK|Hong Kong)|^(?=.*(🧃|🍾|🍸|🧉|🍹))(?=.*(🇭🇰|港|HK|Hong))(?!.*🥤)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港1倍`url-test`^(?!.*[X|x|×]).*\b(港|HK|Hong Kong)\b|^(?=.*(🧃|🍾|🍸|🧉|🍹))(?=.*(🇭🇰|港|HK|Hong))(?!.*🥤)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港高级`url-test`^(?=.*(?:港|HK|Hong Kong)).*(?:IEPL|IPLC|EIP|CN2GIA|BGP|星链).*|^(?=.*(🥤))(?=.*(🇭🇰|港|HK|Hong))`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 台湾低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(台|新北|彰化|TW|Taiwan)|^(?=.*(🧃|🍾|🍸|🧉|🍹))(?=.*(台|新北|彰化|TW|Taiwan))`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 台湾1倍`url-test`^(?!.*[X|x|×]).*\b(台|新北|彰化|TW|Taiwan)\b|^(?=.*(🧃|🍾|🍸|🧉|🍹))(?=.*(台|新北|彰化|TW|Taiwan))`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(台|新北|彰化|TW|Taiwan)|^(?=.*(🧃|🍾|🍸|🧉|🍹))(?=.*(台|新北|彰化|TW|Taiwan))(?!.*🥤)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾1倍`url-test`^(?!.*[X|x|×]).*\b(台|新北|彰化|TW|Taiwan)\b|^(?=.*(🧃|🍾|🍸|🧉|🍹))(?=.*(台|新北|彰化|TW|Taiwan))(?!.*🥤)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 台湾高级`url-test`^(?=.*(?:台|新北|彰化|TW|Taiwan)).*(?:IEPL|IPLC|EIP|CN2GIA|BGP|星链).*|^(?=.*(🥤))(?=.*(台|新北|彰化|TW|Taiwan))`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 狮城低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(新加坡|坡|狮城|SG|Singapore)|^(?=.*(🧃|🍾|🍸|🧉|🍹))(?=.*(新加坡|坡|狮城|SG|Singapore))`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 狮城1倍`url-test`^(?!.*[X|x|×]).*\b(新加坡|坡|狮城|SG|Singapore)\b|^(?=.*(🧃|🍾|🍸|🧉|🍹))(?=.*(新加坡|坡|狮城|SG|Singapore))`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(新加坡|坡|狮城|SG|Singapore)|^(?=.*(🧃|🍾|🍸|🧉|🍹))(?=.*(新加坡|坡|狮城|SG|Singapore))(?!.*🥤)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城1倍`url-test`^(?!.*[X|x|×]).*\b(新加坡|坡|狮城|SG|Singapore)\b|^(?=.*(🧃|🍾|🍸|🧉|🍹))(?=.*(新加坡|坡|狮城|SG|Singapore))(?!.*🥤)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 狮城高级`url-test`^(?=.*(?:新加坡|坡|狮城|SG|Singapore)).*(?:IEPL|IPLC|EIP|CN2GIA|BGP|星链).*|^(?=.*(🥤))(?=.*(新加坡|坡|狮城|SG|Singapore))`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(?=.*(?:日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan))|^(?=.*(🧃|🍾|🍸|🧉|🍹))(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan))`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本1倍`url-test`^(?!.*[X|x|×]).*(?=.*\b(?:日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)\b)|^(?=.*(🧃|🍾|🍸|🧉|🍹))(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan))`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(?=.*(?:日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan))|^(?=.*(🧃|🍾|🍸|🧉|🍹))(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan))(?!.*🥤)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本1倍`url-test`^(?!.*[X|x|×]).*(?=.*\b(?:日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan)\b)|^(?=.*(🧃|🍾|🍸|🧉|🍹))(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan))(?!.*🥤)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本高级`url-test`^(?=.*(?:日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan))(?=.*(?:IEPL|IPLC|EIP|CN2GIA|BGP|星链)).*|^(?=.*(🥤))(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|[^-]日|JP|Japan))`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇺🇲 美国低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)|^(?=.*(🧃|🍾|🍸|🧉|🍹))(?=.*(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇺🇲 美国1倍`url-test`^(?!.*[X|x|×]).*\b(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)\b|^(?=.*(🧃|🍾|🍸|🧉|🍹))(?=.*(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇺🇲 美国低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)|^(?=.*(🧃|🍾|🍸|🧉|🍹))(?=.*(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))(?!.*🥤)`http://www.gstatic.com/generate_204`300,,150
+custom_proxy_group=🇺🇲 美国1倍`url-test`^(?!.*[X|x|×]).*\b(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)\b|^(?=.*(🧃|🍾|🍸|🧉|🍹))(?=.*(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))(?!.*🥤)`http://www.gstatic.com/generate_204`300,,150
 custom_proxy_group=🇺🇲 美国高级`url-test`^(?=.*(?:美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States)).*(?:IEPL|IPLC|EIP|CN2GIA|BGP|星链).*|^(?=.*(🥤))(?=.*(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))`http://www.gstatic.com/generate_204`300,,150
-custom_proxy_group=🇰🇷 韩国低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(KR|Korea|KOR|首尔|韩|韓)|^(?=.*(🧃|🍾|🍸|🧉|🍹))(?=.*(KR|Korea|KOR|首尔|韩|韓))`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 韩国1倍`url-test`^(?!.*[X|x|×]).*\b(KR|Korea|KOR|首尔|韩|韓)\b|^(?=.*(🧃|🍾|🍸|🧉|🍹))(?=.*(KR|Korea|KOR|首尔|韩|韓))`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(KR|Korea|KOR|首尔|韩|韓)|^(?=.*(🧃|🍾|🍸|🧉|🍹))(?=.*(KR|Korea|KOR|首尔|韩|韓))(?!.*🥤)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国1倍`url-test`^(?!.*[X|x|×]).*\b(KR|Korea|KOR|首尔|韩|韓)\b|^(?=.*(🧃|🍾|🍸|🧉|🍹))(?=.*(KR|Korea|KOR|首尔|韩|韓))(?!.*🥤)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇰🇷 韩国高级`url-test`^(?=.*(?:KR|Korea|KOR|首尔|韩|韓)).*(?:IEPL|IPLC|EIP|CN2GIA|BGP|星链).*|^(?=.*(🥤))(?=.*(KR|Korea|KOR|首尔|韩|韓))`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🌏 低倍节点`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))|^(?=.*(🧃|🍾|🍸|🧉|🍹))`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌏 守候低倍`url-test`^((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(?!.*🧃|🍾|🍸|🧉|🍹|🥤).*$`http://www.gstatic.com/generate_204`300,,50             
 ;设置分组标志位
 
 enable_rule_generator=true
