--- a/古+守.ini
+++ b/古+守.ini
@@ -123,7 +123,7 @@ custom_proxy_group=🇰🇷 韩国低倍`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]
 custom_proxy_group=🇰🇷 韩国1倍`url-test`^(?!.*[X|x|×]).*\b(KR|Korea|KOR|首尔|韩|韓)\b|^(?=.*(🧃|🍾|🍸|🧉|🍹))(?=.*(KR|Korea|KOR|首尔|韩|韓))(?!.*🥤)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇰🇷 韩国高级`url-test`^(?=.*(?:KR|Korea|KOR|首尔|韩|韓)).*(?:IEPL|IPLC|EIP|CN2GIA|BGP|星链).*|^(?=.*(🥤))(?=.*(KR|Korea|KOR|首尔|韩|韓))`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🌏 低倍节点`url-test`((?=.*0\.[1-9])|(?=.*0\.0[1-9]))|^(?=.*(🧃|🍾|🍸|🧉|🍹))`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🌏 守候低倍`url-test`^((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(?!.*🧃|🍾|🍸|🧉|🍹|🥤).*$`http://www.gstatic.com/generate_204`300,,50             
+custom_proxy_group=🌏 守候低倍`url-test`^((?=.*0\.[1-9])|(?=.*0\.0[1-9]))(?!.*🧃|🍾|🍸|🧉|🍹|🥤)(?!.*🥤).*$`http://www.gstatic.com/generate_204`300,,50             
 ;设置分组标志位
 
 enable_rule_generator=true
