--- a/守候+古茗.ini
+++ b/守候+古茗.ini
@@ -129,7 +129,7 @@ custom_proxy_group=🇰🇷 韩国低倍`url-test`^(?=.*(🇰🇷|韩|韓|首尔
 custom_proxy_group=🇰🇷 韩国1倍`url-test`^(?=.*(🇰🇷|韩|韓|首尔|KR|Korea))(?!.*(X|x|×)).*$|^(?=.*(🇰🇷|韩|韓|首尔|KR|Korea))(?!.*(🥤))(?!.*(Emby|emby|EMBY)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇰🇷 韩国高级`url-test`^(?=.*(🇰🇷|韩|韓|首尔|KR|Korea))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链)).*$|^(?=.*(🇰🇷|韩|韓|首尔|KR|Korea))(?=.*(🥤)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🌏 低倍节点`url-test`^(?=.*(HK|港|TW|台|SG|狮|JP|日|US|美|KR|韩))(?=.*(0\.[1-9]))(?=.*(0\.0[1-9]))(?!.*(🥤))(?!.*(Emby|emby|EMBY)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌏 低倍节点`url-test`^(?=.*(HK|港|TW|台|SG|狮|JP|日|US|美|KR|韩))(?=.*(0\.[1-9]))(?=.*(0\.0[1-9]))(?!.*(Emby|emby|EMBY))|(?=.*(HK|港|TW|台|SG|狮|JP|日|US|美|KR|韩))(?!.*(🥤))(?!.*(Emby|emby|EMBY)).*$`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=🌏 守候低倍`url-test`^(?=.*(HK|港|TW|台|SG|狮|JP|日|US|美|KR|韩))(?=.*(0\.[1-9]))(?=.*(0\.0[1-9])).*$`http://www.gstatic.com/generate_204`300,,50
 
