--- a/XTT&GM.ini
+++ b/XTT&GM.ini
@@ -105,7 +105,7 @@ custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🚀 手动切换
 
-custom_proxy_group=🇭🇰 香港低倍`url-test`^(?=.*(🇭🇰|港|HK|Hong))(?=.*(0\.[1-9]))|(?=.*(0\.0[1-9])).*$|^(?=.*(🇭🇰|港|HK|Hong))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港低倍`url-test`^(?=.*(🇭🇰|港|HK|Hong))(?=.*(0\.[1-9]))|(?=.*(0\.0[1-9]))(?!.*(Emby|emby|EMBY)).*$|^(?=.*(🇭🇰|港|HK|Hong))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港1倍`url-test`^(?=.*(🇭🇰|港|HK|Hong))(?!.*(X|x|×)).*$|^(?=.*(🇭🇰|港|HK|Hong))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港高级`url-test`^(?=.*(🇭🇰|港|HK|Hong))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链)).*$|^(?=.*(🇭🇰|港|HK|Hong))(?=.*(🥤)).*$`http://www.gstatic.com/generate_204`300,,50
 
@@ -129,9 +129,9 @@ custom_proxy_group=🇰🇷 韩国低倍`url-test`^(?=.*(🇰🇷|韩|韓|首尔
 custom_proxy_group=🇰🇷 韩国1倍`url-test`^(?=.*(🇰🇷|韩|韓|首尔|KR|Korea))(?!.*(X|x|×)).*$|^(?=.*(🇰🇷|韩|韓|首尔|KR|Korea))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇰🇷 韩国高级`url-test`^(?=.*(🇰🇷|韩|韓|首尔|KR|Korea))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链)).*$|^(?=.*(🇰🇷|韩|韓|首尔|KR|Korea))(?=.*(🥤)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🌏 低倍节点`url-test`^(?=.*(🇭🇰|港|HK|Hong))(?=.*(0\.[1-9]))|(?=.*(0\.0[1-9])).*$|^(?=.*(港|HK|台|TW|狮|SG|日|JP))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌏 低倍节点`url-test`^(?=.*(港|HK|台|TW|狮|SG|日|JP))(?=.*(0\.[1-9]))|(?=.*(0\.0[1-9]))(?!.*(Emby|emby|EMBY)).*$|^(?=.*(港|HK|台|TW|狮|SG|日|JP))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🌏 守候低倍`url-test`^(?=.*(🇭🇰|港|HK|Hong))(?=.*(0\.[1-9]))|(?=.*(0\.0[1-9])).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌏 守候低倍`url-test`^(?=.*(🇭🇰|港|HK|Hong))(?=.*(0\.[1-9]))|(?=.*(0\.0[1-9]))(?!.*(Emby|emby|EMBY)).*$`http://www.gstatic.com/generate_204`300,,50
 
 enable_rule_generator=true
 overwrite_original_rules=true
