--- a/XTT&GM.ini
+++ b/XTT&GM.ini
@@ -131,7 +131,7 @@ custom_proxy_group=🇰🇷 韩国高级`url-test`^(?=.*(🇰🇷|韩|韓|首尔
 
 custom_proxy_group=🌏 低倍节点`url-test`^(?=.*(港|HK|台|TW|狮|SG|日|JP))(?!.*(Emby|emby|EMBY))(?=.*(0\.[1-9]))|(?=.*(0\.0[1-9])).*$|^(?=.*(港|HK|台|TW|狮|SG|日|JP))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🌏 守候低倍`url-test`^(?=.*(🇭🇰|港|HK|Hong))(?!.*(Emby|emby|EMBY))(?=.*(0\.[1-9]))|(?=.*(0\.0[1-9])).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌏 守候低倍`url-test`^(?=.*(港|HK|台|TW|狮|SG|日|JP))(?!.*(Emby|emby|EMBY))(?=.*(0\.[1-9]))|(?=.*(0\.0[1-9])).*$`http://www.gstatic.com/generate_204`300,,50
 
 enable_rule_generator=true
 overwrite_original_rules=true
