--- a/XTT&GM.ini
+++ b/XTT&GM.ini
@@ -49,6 +49,7 @@ ruleset=🎶 Shopify,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Cl
 ruleset=📺 Disney,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/DisneyPlus.list
 ruleset=📺 Netflix,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Netflix.list
 ruleset=📺 guguEmby,https://raw.githubusercontent.com/Yzaams/clash/main/guguemby.list
+ruleset=📺 MJJEmby,https://raw.githubusercontent.com/Yzaams/clash/main/mjjemby.list
 ruleset=📺 Emby,https://raw.githubusercontent.com/Yzaams/clash/main/emby.list
 ruleset=📺 国内媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaMedia.list
 ruleset=📺 国内媒体,https://raw.githubusercontent.com/Yzaams/clash/main/%E5%9B%BD%E5%86%85%E5%AA%92%E4%BD%93.list
@@ -92,7 +93,8 @@ custom_proxy_group=🤝 Discord`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城
 custom_proxy_group=🎶 Shopify`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 Disney`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 Netflix`select`[]🇸🇬 狮城低倍`[]🇸🇬 狮城1倍`[]🇸🇬 狮城高级`[]🚀 节点选择`[]🚀 手动切换
-custom_proxy_group=📺 guguEmby`select`[]🌏 守候低倍
+custom_proxy_group=📺 guguEmby`select`[]🌏 XTT低倍
+custom_proxy_group=📺 MJJEmby`select`[]🌏 GMemby
 custom_proxy_group=📺 Emby`select`[]DIRECT`[]🌏 低倍节点`[]🚀 节点选择`[]🚀 手动切换
 custom_proxy_group=📺 国内媒体`select`[]DIRECT
 custom_proxy_group=📺 国外媒体`select`[]🌏 低倍节点`[]🚀 节点选择`[]🚀 手动切换
@@ -105,33 +107,35 @@ custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🚀 手动切换
 
-custom_proxy_group=🇭🇰 香港低倍`url-test`^(?=.*(🇭🇰|港|HK|Hong))(?=.*(0\.[1-9]))|(?=.*(0\.0[1-9])).*$|^(?=.*(🇭🇰|港|HK|Hong))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 香港1倍`url-test`^(?=.*(🇭🇰|港|HK|Hong))(?!.*(X|x|×)).*$|^(?=.*(🇭🇰|港|HK|Hong))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港低倍`url-test`^(?=.*(🇭🇰|港|HK|Hong))(?=.*(0\.[1-9]))|(?=.*(0\.0[1-9]))(?!.*(emby|Emby|EMBY)).*$|^(?=.*(🇭🇰|港|HK|Hong))(?!.*(🥤))(?!.*(emby|Emby|EMBY)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港1倍`url-test`^(?=.*(🇭🇰|港|HK|Hong))(?!.*(X|x|×)).*$|^(?=.*(🇭🇰|港|HK|Hong))(?!.*(🥤))(?!.*(emby|Emby|EMBY)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港高级`url-test`^(?=.*(🇭🇰|港|HK|Hong))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链)).*$|^(?=.*(🇭🇰|港|HK|Hong))(?=.*(🥤)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇹🇼 台湾低倍`url-test`^(?=.*(🇹🇼|台|新北|彰化|TW|Taiwan))(?=.*(0\.[1-9]))|(?=.*(0\.0[1-9])).*$|^(?=.*(🇹🇼|台|新北|彰化|TW|Taiwan))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇹🇼 台湾1倍`url-test`^(?=.*(🇹🇼|台|新北|彰化|TW|Taiwan))(?!.*(X|x|×)).*$|^(?=.*(🇹🇼|台|新北|彰化|TW|Taiwan))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾低倍`url-test`^(?=.*(🇹🇼|台|新北|彰化|TW|Taiwan))(?=.*(0\.[1-9]))|(?=.*(0\.0[1-9]))(?!.*(emby|Emby|EMBY)).*$|^(?=.*(🇹🇼|台|新北|彰化|TW|Taiwan))(?!.*(🥤))(?!.*(emby|Emby|EMBY)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾1倍`url-test`^(?=.*(🇹🇼|台|新北|彰化|TW|Taiwan))(?!.*(X|x|×)).*$|^(?=.*(🇹🇼|台|新北|彰化|TW|Taiwan))(?!.*(🥤))(?!.*(emby|Emby|EMBY)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 台湾高级`url-test`^(?=.*(🇹🇼|台|新北|彰化|TW|Taiwan))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链)).*$|^(?=.*(🇹🇼|台|新北|彰化|TW|Taiwan))(?=.*(🥤)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇸🇬 狮城低倍`url-test`^(?=.*(🇸🇬|新加坡|狮|SG|Singapore))(?=.*(0\.[1-9]))|(?=.*(0\.0[1-9])).*$|^(?=.*(🇸🇬|新加坡|狮|SG|Singapore))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇸🇬 狮城1倍`url-test`^(?=.*(🇸🇬|新加坡|狮|SG|Singapore))(?!.*(X|x|×)).*$|^(?=.*(🇸🇬|新加坡|狮|SG|Singapore))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城低倍`url-test`^(?=.*(🇸🇬|新加坡|狮|SG|Singapore))(?=.*(0\.[1-9]))|(?=.*(0\.0[1-9]))(?!.*(emby|Emby|EMBY)).*$|^(?=.*(🇸🇬|新加坡|狮|SG|Singapore))(?!.*(🥤))(?!.*(emby|Emby|EMBY)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城1倍`url-test`^(?=.*(🇸🇬|新加坡|狮|SG|Singapore))(?!.*(X|x|×)).*$|^(?=.*(🇸🇬|新加坡|狮|SG|Singapore))(?!.*(🥤))(?!.*(emby|Emby|EMBY)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 狮城高级`url-test`^(?=.*(🇸🇬|新加坡|狮|SG|Singapore))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链)).*$|^(?=.*(🇸🇬|新加坡|狮|SG|Singapore))(?=.*(🥤)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇯🇵 日本低倍`url-test`^(?=.*(🇯🇵|日|川日|东京|大阪|泉日|埼玉|JP|Japan))(?=.*(0\.[1-9]))(?=.*(0\.0[1-9])).*$|^(?=.*(🇯🇵|日|川日|东京|大阪|泉日|埼玉|JP|Japan))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇯🇵 日本1倍`url-test`^(?=.*(🇯🇵|日|川日|东京|大阪|泉日|埼玉|JP|Japan))(?!.*(X|x|×)).*$|^(?=.*(🇯🇵|日|川日|东京|大阪|泉日|埼玉|JP|Japan))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本低倍`url-test`^(?=.*(🇯🇵|日|川日|东京|大阪|泉日|埼玉|JP|Japan))(?=.*(0\.[1-9]))(?=.*(0\.0[1-9]))(?!.*(emby|Emby|EMBY)).*$|^(?=.*(🇯🇵|日|川日|东京|大阪|泉日|埼玉|JP|Japan))(?!.*(🥤))(?!.*(emby|Emby|EMBY)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本1倍`url-test`^(?=.*(🇯🇵|日|川日|东京|大阪|泉日|埼玉|JP|Japan))(?!.*(X|x|×)).*$|^(?=.*(🇯🇵|日|川日|东京|大阪|泉日|埼玉|JP|Japan))(?!.*(🥤))(?!.*(emby|Emby|EMBY)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本高级`url-test`^(?=.*(🇯🇵|日|川日|东京|大阪|泉日|埼玉|JP|Japan))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链)).*$|^(?=.*(🇯🇵|日|川日|东京|大阪|泉日|埼玉|JP|Japan))(?=.*(🥤)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇺🇲 美国低倍`url-test`^(?=.*(🇺🇸|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))(?=.*(0\.[1-9]))|(?=.*(0\.0[1-9])).*$|^(?=.*(🇺🇸|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇺🇲 美国低倍`url-test`^(?=.*(🇺🇸|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))(?=.*(0\.[1-9]))(?!.*(emby|Emby|EMBY))|(?=.*(0\.0[1-9])).*$|^(?=.*(🇺🇸|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国1倍`url-test`^(?=.*(🇺🇸|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))(?!.*(X|x|×)).*$|^(?=.*(🇺🇸|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇺🇲 美国高级`url-test`^(?=.*(🇺🇸|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链)).*$|^(?=.*(🇺🇸|美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))(?=.*(🥤)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇰🇷 韩国低倍`url-test`^(?=.*(🇰🇷|韩|韓|首尔|KR|Korea))(?=.*(0\.[1-9]))|(?=.*(0\.0[1-9])).*$|^(?=.*(🇰🇷|韩|韓|首尔|KR|Korea))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇰🇷 韩国1倍`url-test`^(?=.*(🇰🇷|韩|韓|首尔|KR|Korea))(?!.*(X|x|×)).*$|^(?=.*(🇰🇷|韩|韓|首尔|KR|Korea))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国低倍`url-test`^(?=.*(🇰🇷|韩|韓|首尔|KR|Korea))(?=.*(0\.[1-9]))|(?=.*(0\.0[1-9]))(?!.*(emby|Emby|EMBY)).*$|^(?=.*(🇰🇷|韩|韓|首尔|KR|Korea))(?!.*(🥤))(?!.*(emby|Emby|EMBY)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇰🇷 韩国1倍`url-test`^(?=.*(🇰🇷|韩|韓|首尔|KR|Korea))(?!.*(X|x|×)).*$|^(?=.*(🇰🇷|韩|韓|首尔|KR|Korea))(?!.*(🥤))(?!.*(emby|Emby|EMBY)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇰🇷 韩国高级`url-test`^(?=.*(🇰🇷|韩|韓|首尔|KR|Korea))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链)).*$|^(?=.*(🇰🇷|韩|韓|首尔|KR|Korea))(?=.*(🥤)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🌏 低倍节点`url-test`^(?=.*(港|HK|台|TW|狮|SG|日|JP))(?=.*(0\.[1-9]))|(?=.*(0\.0[1-9])).*$|^(?=.*(港|HK|台|TW|狮|SG|日|JP))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌏 低倍节点`url-test`^(?=.*(港|HK|台|TW|狮|SG|日|JP))(?=.*(0\.[1-9]))|(?=.*(0\.0[1-9]))(?!.*(emby|Emby|EMBY)).*$|^(?=.*(港|HK|台|TW|狮|SG|日|JP))(?!.*(🥤))(?!.*(emby|Emby|EMBY)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🌏 守候低倍`url-test`^(?=.*(HK|TW|SG|JP))(?=.*(0\.[1-9]))|(?=.*(0\.0[1-9])).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌏 XTT低倍`url-test`^(?=.*(HK|TW|SG|JP))(?=.*(0\.[1-9]))|(?=.*(0\.0[1-9]))(?!.*(emby|Emby|EMBY)).*$`http://www.gstatic.com/generate_204`300,,50
+
+custom_proxy_group=🌏 GMemby`url-test`^(?=.*(香港|台湾|狮城|日本))(?=.*(emby|Emby|EMBY)).*$`http://www.gstatic.com/generate_204`300,,50
 
 enable_rule_generator=true
 overwrite_original_rules=true
