--- a/XTT&GM.ini
+++ b/XTT&GM.ini
@@ -135,7 +135,7 @@ custom_proxy_group=🌏 低倍节点`url-test`^(?=.*(港|HK|台|TW|狮|SG|日|JP
 
 custom_proxy_group=🌏 XTT低倍`url-test`^(?=.*(HK|TW|SG|JP))(?=.*(0\.[1-9]))|(?=.*(0\.0[1-9]))(?!.*(Emby)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🌏 GMemby`url-test`^(?=.*(香港|台湾|狮城|日本))(?=.*(emby|Emby|EMBY)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🌏 GMemby`url-test`^(?=.*(香港|台湾|狮城|日本))(?=.*(Emby).*$`http://www.gstatic.com/generate_204`300,,50
 
 enable_rule_generator=true
 overwrite_original_rules=true
