--- a/XTT&GM.ini
+++ b/XTT&GM.ini
@@ -108,7 +108,7 @@ custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🚀 手动切换
 
 custom_proxy_group=🇭🇰 香港低倍`url-test`^(?=.*(🇭🇰|港|HK|Hong))(?=.*(0\.[1-9]))|(?=.*(0\.0[1-9]))(?!.*(?i)emby)|(?=.*(🇭🇰|港|HK|Hong))(?!.*(🥤))(?!.*(?i)emby).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 香港1倍`url-test`^(?=.*(🇭🇰|港|HK|Hong))(?!.*(X|x|×))|(?=.*(🇭🇰|港|HK|Hong))(?!.*(?i)emby)(?!.*(🥤))(?!.*(?i)emby).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港1倍`url-test`^(?=.*(🇭🇰|港|HK|Hong))(?!.*(X|x|×))(?!.*(?i)emby)|(?=.*(🇭🇰|港|HK|Hong))(?!.*(?i)emby)(?!.*(🥤))(?!.*(?i)emby).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港高级`url-test`^(?=.*(🇭🇰|港|HK|Hong))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链)).*$|^(?=.*(🇭🇰|港|HK|Hong))(?=.*(🥤)).*$`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=🇹🇼 台湾低倍`url-test`^(?=.*(🇹🇼|台|新北|彰化|TW|Taiwan))(?=.*(0\.[1-9]))|(?=.*(0\.0[1-9]))(?!.*(🥤))(?!.*(?i)emby).*$`http://www.gstatic.com/generate_204`300,,50
