--- a/守候+古茗.ini
+++ b/守候+古茗.ini
@@ -105,8 +105,8 @@ custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🚀 手动切换
 
-custom_proxy_group=🇭🇰 香港低倍`url-test`^(?=.*(🇭🇰|港|HK|Hong))(?=.*(0\.[1-9]))|(?=.*(0\.0[1-9]))(?!.*(Emby)).*$|^(?=.*(🇭🇰|港|HK|Hong))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 香港1倍`url-test`^(?=.*(🇭🇰|港|HK|Hong))(?!.*(X|x|×|Emby)).*$|^(?=.*(🇭🇰|港|HK|Hong))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港低倍`url-test`^(?=.*(🇭🇰|港|HK|Hong))(?=.*(0\.[1-9]))|(?=.*(0\.0[1-9]))(?!.*(专用)).*$|^(?=.*(🇭🇰|港|HK|Hong))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港1倍`url-test`^(?=.*(🇭🇰|港|HK|Hong))(?!.*(X|x|×|专用)).*$|^(?=.*(🇭🇰|港|HK|Hong))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港高级`url-test`^(?=.*(🇭🇰|港|HK|Hong))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链)).*$|^(?=.*(🇭🇰|港|HK|Hong))(?=.*(🥤)).*$`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=🇹🇼 台湾低倍`url-test`^(?=.*(🇹🇼|台|新北|彰化|TW|Taiwan))(?=.*(0\.[1-9]))|(?=.*(0\.0[1-9])).*$|^(?=.*(🇹🇼|台|新北|彰化|TW|Taiwan))(?=.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
