--- a/XTT~```GM.ini
+++ b/XTT~```GM.ini
@@ -107,19 +107,19 @@ custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🚀 手动切换
 
-custom_proxy_group=🇭🇰 香港低倍`url-test`^(?=.*🇭🇰|港|HK|Hong)(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$|^(?=.*🇭🇰|港|HK|Hong)(?!.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🇭🇰 香港1倍`url-test`^(?=.*(🇭🇰|港|HK|Hong))(?!.*(X|x|×|)).*$|^(?=.*(🇭🇰|港|HK|Hong))(?!.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港低倍`url-test`^(?=.*🇭🇰|港|HK|Hong)(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby)|^(?=.*🇭🇰|港|HK|Hong)(?=.*🧃|🍾|🍸|🧉|🍹).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇭🇰 香港1倍`url-test`^(?=.*(🇭🇰|港|HK|Hong))(?!.*(X|x|×)).*$|^(?=.*(🇭🇰|港|HK|Hong))(?!.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇭🇰 香港高级`url-test`^(?=.*(🇭🇰|港|HK|Hong))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链)).*$|^(?=.*(🇭🇰|港|HK|Hong))(?=.*(🥤)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇹🇼 台湾低倍`url-test`^(?=.*(🇹🇼|台|新北|彰化|TW|Taiwan))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$|^(?=.*(🇹🇼|台|新北|彰化|TW|Taiwan))(?!.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇹🇼 台湾低倍`url-test`^(?=.*🇹🇼|台|新北|彰化|TW|Taiwan)(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby)|^(?=.*🇹🇼|台|新北|彰化|TW|Taiwan)(?=.*🧃|🍾|🍸|🧉|🍹).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 台湾1倍`url-test`^(?=.*(🇹🇼|台|新北|彰化|TW|Taiwan))(?!.*(X|x|×)).*$|^(?=.*(🇹🇼|台|新北|彰化|TW|Taiwan))(?!.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇹🇼 台湾高级`url-test`^(?=.*(🇹🇼|台|新北|彰化|TW|Taiwan))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链)).*$|^(?=.*(🇹🇼|台|新北|彰化|TW|Taiwan))(?=.*(🥤)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇸🇬 狮城低倍`url-test`^(?=.*(🇸🇬|新加坡|狮|SG|Singapore))(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby).*$|^(?=.*(🇸🇬|新加坡|狮|SG|Singapore))(?!.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇸🇬 狮城低倍`url-test`^(?=.*🇸🇬|新加坡|狮|SG|Singapore)(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby)|^(?=.*🇸🇬|新加坡|狮|SG|Singapore)(?=.*🧃|🍾|🍸|🧉|🍹).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 狮城1倍`url-test`^(?=.*(🇸🇬|新加坡|狮|SG|Singapore))(?!.*(X|x|×)).*$|^(?=.*(🇸🇬|新加坡|狮|SG|Singapore))(?!.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇸🇬 狮城高级`url-test`^(?=.*(🇸🇬|新加坡|狮|SG|Singapore))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链)).*$|^(?=.*(🇸🇬|新加坡|狮|SG|Singapore))(?=.*(🥤)).*$`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🇯🇵 日本低倍`url-test`^(?=.*(🇯🇵|日|川日|东京|大阪|泉日|埼玉|JP|Japan))(?=.*(0\.[1-9]))(?=.*(0\.0[1-9])).*$|^(?=.*(🇯🇵|日|川日|东京|大阪|泉日|埼玉|JP|Japan))(?!.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🇯🇵 日本低倍`url-test`^(?=.*🇯🇵|日|川日|东京|大阪|泉日|埼玉|JP|Japan)(?=.*0\.[1-9])(?!.*Emby)|(?=.*(0\.0[1-9]))(?!.*Emby)|^(?=.*🇯🇵|日|川日|东京|大阪|泉日|埼玉|JP|Japan)(?=.*🧃|🍾|🍸|🧉|🍹).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本1倍`url-test`^(?=.*(🇯🇵|日|川日|东京|大阪|泉日|埼玉|JP|Japan))(?!.*(X|x|×)).*$|^(?=.*(🇯🇵|日|川日|东京|大阪|泉日|埼玉|JP|Japan))(?!.*(🧃|🍾|🍸|🧉|🍹)).*$`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🇯🇵 日本高级`url-test`^(?=.*(🇯🇵|日|川日|东京|大阪|泉日|埼玉|JP|Japan))(?=.*(IEPL|IPLC|EIP|CN2GIA|BGP|星链)).*$|^(?=.*(🇯🇵|日|川日|东京|大阪|泉日|埼玉|JP|Japan))(?=.*(🥤)).*$`http://www.gstatic.com/generate_204`300,,50
 
